Update recipe.yml (qtvirtualkeyboard)

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -27,6 +27,7 @@ modules:
       - jetbrains-mono-fonts
       - lm_sensors
       - kvkbd
+      - qt5-qtvirtualkeyboard
 
       - kate
       - okular
