--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -19,6 +19,8 @@ modules:
 
   - type: rpm-ostree
     repos: # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
+      - https://copr.fedorainfracloud.org/coprs/yalter/niri/repo/fedora-%OS_VERSION%/yalter-niri-fedora-%OS_VERSION%.repo
+      - https://copr.fedorainfracloud.org/coprs/tofik/nwg-shell/repo/fedora-%OS_VERSION%/tofik-nwg-shell-fedora-%OS_VERSION%.repo
     install:
       - fish
       - micro
@@ -33,6 +35,9 @@ modules:
       - okular
       - gwenview
       - filelight
+
+      - niri
+      - nwg-shell
     remove:
       - firefox # default firefox removed
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
