Update recipe.yml (-> 40, add x11 plasma)

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -29,6 +29,8 @@ modules:
       - kvkbd
       - qt5-qtvirtualkeyboard
 
+      - plasma-workspace-x11
+
       - kate
       - okular
       - gwenview
